--- a/view/common/block-layout/quotation.phtml
+++ b/view/common/block-layout/quotation.phtml
@@ -1,4 +1,4 @@
-<section class="full-width-css background-colour-1">  
+<section class="full-width-css background-colour-light-gray">  
     <div id="block-<?php echo $this->blockId; ?>" class="blockquote-wrapper">
         <blockquote>
             <h3><?php echo $this->html; ?></h3>
