--- a/view/common/block-layout/resource-text-metadata.phtml
+++ b/view/common/block-layout/resource-text-metadata.phtml
@@ -21,7 +21,7 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block media-text grid-x grid-padding-x full-width padding-2 align-spaced">
+<div class="block media-text grid-x grid-padding-x full-width medium-padding-1 xlarge-padding-2 align-spaced">
     <?php if (!empty($heading)): ?>
     <h2><?= $escape($heading) ?></h2>
     <?php endif; ?>
