--- a/view/common/block-layout/site-promo.phtml
+++ b/view/common/block-layout/site-promo.phtml
@@ -1,4 +1,4 @@
-<div id="block-<?php echo $this->blockId; ?>" class="site-promo grid-x grid-padding-x flex-child-grow region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
+<div id="block-<?php echo $this->blockId; ?>" class="site-promo grid-x grid-padding-x flex-child-grow small-padding-vertical-1 large-padding-vertical-2 region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php foreach ($attachments as $attachment): ?>
         <?php
             $item = $attachment->item();
