--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -128,8 +128,8 @@ endif;
                         </ul>
                     </div>
                 </div>               
-                <hr>                    
-                <div class="grid-x grid-container padding-vertical-1">
+                <hr class="full-width-css">                    
+                <div class="grid-x grid-container padding-bottom-1">
                     <ul class="inlineList">
                         <li><a href="https://www.manchester.ac.uk/disclaimer/">Disclaimer</a> /</li>
                                     <li><a href="https://www.manchester.ac.uk/discover/privacy-information/data-protection/">Data Protection</a> /</li>
