--- a/view/common/block-layout/cards.phtml
+++ b/view/common/block-layout/cards.phtml
@@ -1,14 +1,14 @@
-<div id="block-<?php echo $this->blockId; ?>" class="listing-cards region <?php echo $this->regionClass; ?> <?php echo $this->classes ?>" data-target-region-id="<?php echo $this->targetID; ?>">
+<div id="block-<?php echo $this->blockId; ?>" class="listing-cards full-width-css small-padding-vertical-1 large-padding-vertical-2  region <?php echo $this->regionClass; ?> <?php echo $this->classes ?>" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php if ($this->hasTitle): ?>
-        <h2><?php echo $this->title; ?></h2>
+        <h2 class="grid-container"><?php echo $this->title; ?></h2>
     <?php endif; ?>
     <?php if ($this->hasIntroduction): ?>
-        <div class='block-introduction'>
+        <div class='block-introduction grid-container'>
             <?php echo $this->introduction; ?>
         </div>
     <?php endif; ?>
     <?php if ($this->hasPages): ?>
-    <div class="cards grid-x grid-margin-x grid-margin-y margin-vertical-1">
+    <div class="cards grid-x grid-margin-x grid-margin-y margin-1">
         <?php foreach($this->pages as $page): ?>
             <div class='card cell medium-6 large-4 radius bordered shadow'>
                 <?php if ($page['hasEmbeddedBlocks'] && array_key_exists('representativeImage',$page['embeddedBlocks'])): ?>
