--- a/view/common/block-layout/poster.phtml
+++ b/view/common/block-layout/poster.phtml
@@ -16,7 +16,7 @@ if ($attachment !== false) {
 }
 
 ?>
-<div id="block-<?php echo $this->blockId; ?>" class="full-width-css grid-x flex-container align-center align-middle poster region <?php echo $this->thumbnailType; ?> <?php echo $this->regionClass; ?> <?php echo $this->colourScheme; ?> <?php echo $this->textTreatment; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
+<div id="block-<?php echo $this->blockId; ?>" class="full-width-css grid-x small-margin-vertical-1 medium-margin-vertical-2 flex-container align-center align-middle poster region <?php echo $this->thumbnailType; ?> <?php echo $this->regionClass; ?> <?php echo $this->colourScheme; ?> <?php echo $this->textTreatment; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
     <div class="medium-8 large-6 poster-text">
         <?php echo $this->html; ?>
     </div>
