Further minor revisions

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1569,7 +1569,7 @@ figcaption.orbit-caption.caption p {
 
 /*New Item Listing with Introduction*/ 
 .item-listing-with-introduction {
-    background: $warning-color;
+    background: $light-gray;
     padding: 2 * $global-padding;
 }
 
@@ -1720,7 +1720,7 @@ figcaption.orbit-caption.caption p {
 }
 
 .colour-scheme-3 {
-    background: #0a4c1b;
+    background: #502e05;
 }
 
 
