--- a/view/common/block-layout/item-list.phtml
+++ b/view/common/block-layout/item-list.phtml
@@ -1,4 +1,4 @@
-<div id="block-<?php echo $this->blockId; ?>" class="item-list small-padding-vertical-1 medium-padding-vertical-2 region <?php echo $this->regionClass; ?> <?php echo $this->classes ?>" data-target-region-id="<?php echo $this->targetID; ?>">
+<div id="block-<?php echo $this->blockId; ?>" class="item-list small-padding-vertical-1 medium-padding-vertical-2 margin-bottom-1 region <?php echo $this->regionClass; ?> <?php echo $this->classes ?>" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php if ($this->hasTitle): ?>
         <h2><?php echo $this->title; ?></h2>
     <?php endif; ?>
