Small revision to background colours

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1569,7 +1569,7 @@ figcaption.orbit-caption.caption p {
 
 /*New Item Listing with Introduction*/ 
 .item-listing-with-introduction {
-    background: $light-gray;
+    background: $alert-color;
     padding: 2 * $global-padding;
 }
 
