--- a/view/common/block-layout/external-content.phtml
+++ b/view/common/block-layout/external-content.phtml
@@ -18,7 +18,7 @@ $escapeAttr = $plugins->get('escapeHtmlAttr');
 $hyperlink = $plugins->get('hyperlink');
 ?>
 
-<div class="block external-content grid-y grid-padding-y flex-container align-middle media-text">
+<div class="block full-width-css external-content grid-y grid-padding-y padding-1 flex-container align-middle media-text">
     <?php if (!empty($heading)): ?>
     <h2><?= $escape($heading) ?></h2>
     <?php endif; ?>
@@ -58,7 +58,7 @@ $hyperlink = $plugins->get('hyperlink');
 
     <?php $caption = $data['caption'] ?? null; ?>
     <?php if ($caption): ?>
-        <div class="caption">
+        <div class="caption grid-container">
             <?= $caption ?>
         </div>
     <?php endif; ?>
@@ -66,10 +66,10 @@ $hyperlink = $plugins->get('hyperlink');
 <?php endforeach; ?>
     </div>
 </div>
-<?= $html ?>
+<div class="grid-container"><?= $html ?></div>
 
 <?php if ($linkText && $linkUrl): ?>
-<?= $hyperlink($linkText, $linkUrl) ?>
+<button expanded type="button" class="alert button link-text-white"><?= $hyperlink($linkText, $linkUrl) ?></button>
 <?php elseif ($linkText): ?>
 <span><?= $escape($linkText) ?></span>
 <?php endif; ?>
