--- a/view/common/block-layout/cards-compact.phtml
+++ b/view/common/block-layout/cards-compact.phtml
@@ -4,7 +4,7 @@ $itemCount = count($this->pages);
 ?>
 <div id="block-<?php echo $this->blockId; ?>" class="flex-container flex-dir-row grid-x grid-margin-x grid-margin-y compact-card-listing small-padding-vertical-1 large-padding-vertical-2 item-count-<?php echo $itemCount; ?> <?php echo $this->regionClass; ?> <?php echo $this->classes ?>" data-target-region-id="<?php echo $this->targetID; ?>">
     <?php if ($this->hasTitle || $this->hasIntroduction): ?>
-        <div class='title-area'>
+        <div class='title-area small-12'>
             <?php if ($this->hasTitle): ?>
                 <h2><?php echo $this->title; ?></h2>
             <?php endif; ?>
