--- a/view/common/block-layout/resource-text-metadata-one.phtml
+++ b/view/common/block-layout/resource-text-metadata-one.phtml
@@ -27,7 +27,7 @@ $lang = $filterLocale ? $this->lang() : null;
     <h2><?= $escape($heading) ?></h2>
     <?php endif; ?>
     </div>
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 flex-container align-spaced">
+    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file media-text-image large-7 flex-container align-spaced medium-padding-right-1 large-padding-right-0 large-padding-top-1">
         <div class="attachments">
             <?php
             foreach ($attachments as $attachment):
@@ -36,7 +36,7 @@ $lang = $filterLocale ? $this->lang() : null;
                 $link = null;
                 $item = $attachment->item();
                 if ($item):
-              $media = $attachment->media() ? : $item->primaryMedia();
+               $media = $attachment->media() ? : $item->primaryMedia();
                $mediaRenderer = $media->renderer();
                if ($media && $mediaRenderer !== 'iiif') :
                    echo $media->render([
@@ -68,7 +68,6 @@ $lang = $filterLocale ? $this->lang() : null;
             ?>
             <div class="item resource">
                 <?= $render ?>
-                <?= $link ?>
                 <div class="caption">
                     <?= $caption ?>
                 </div>
@@ -76,8 +75,8 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="resource-text large-6 flex-container flex-dir-column align-center padding-1">
-    <div class="metadata margin-bottom-2 separator-center font-wide">
+    <div class="resource-text large-5 flex-container flex-dir-column align-center padding-1">
+    <div class="metadata margin-bottom-1 separator-center">
         <?php $showTitleOption = $this->showTitleOption; ?>
         <?php if ($showTitleOption == 'item_title'): ?>
         <h3><?php echo $item->link($item->displayTitle()); ?></h3>
@@ -96,15 +95,14 @@ $lang = $filterLocale ? $this->lang() : null;
          ?>
       <h3><small><?php echo $origin; ?></small></h3>
       <?php endif; ?>
-      <?php
-         $identifier = $item->value('dcterms:identifier');
-         if ($identifier):
-         ?>
-      <h3><small><?php echo $identifier; ?></small></h3>
-      <?php endif; ?>
       </div>
     <div class="text font-wide">
         <?= $html ?>
-    </div>
+        <?php
+         $identifier = $item->value('dcterms:identifier');
+         if ($identifier):
+         ?>
+      <h3 class="h4"><small><?php echo 'Reference ' . $identifier; ?></small></h3>
+      <?php endif; ?>
     </div>
 </div>
