--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1704,9 +1704,20 @@ figcaption.orbit-caption.caption p {
     }
     @include breakpoint(1250) {
         width: 100%;
-        height: 90vh;
     }
 }
+
+.item-listing {
+@include breakpoint(1250) {
+    height: 90vh;
+}
+}
+
+.image-cover-img img {
+    @include breakpoint(1250) {
+        height: 100vh;
+    }
+    }
 
 .item-listing-image {
     position: relative;
