--- a/view/common/block-layout/homepage-splash.phtml
+++ b/view/common/block-layout/homepage-splash.phtml
@@ -1,4 +1,4 @@
-<div id="homepage-splash" class="full-width-css grid-x grid-padding-x margin-bottom-1 flex-container block-<?php echo $this->blockId; ?> region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
+<div id="homepage-splash" class="full-width-css grid-x grid-padding-x margin-bottom-1 small-order-0 medium-order-1 flex-container block-<?php echo $this->blockId; ?> region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
     <div class="large-7 item-listing-image items">
         <?php foreach ($attachments as $attachment): ?>
             <?php
@@ -24,7 +24,7 @@
     </div>
    
 
-    <div class="large-5 grid-y grid-padding-y padding-2 introduction title-area background-colour-uom-footer">
+    <div class="large-5 grid-y grid-padding-y padding-1 medium-padding-2 small-order-1 medium-order-0 introduction title-area background-colour-uom-footer">
         <div class='flex-container flex-dir-column introductory-text'>
             <?php if (!empty($titleSlideTitle)): ?>
                 <h2 class="h1 padding-bottom-1"><?php echo $titleSlideTitle; ?></h2>
