Revised Resource with Text Video Block

--- a/asset/scss/_globals-default.scss
+++ b/asset/scss/_globals-default.scss
@@ -2,7 +2,7 @@
 $global-font-size: 100%;
 $global-width: rem-calc(1140);
 $global-lineheight: 1.5;
-$foundation-palette: ( primary: #6b2c91, secondary: #2c0142, success: #3adb76, warning: #ff8d00, alert: #c91b00);
+$foundation-palette: ( primary: #6b2c91, secondary: #2c0142, success: #3adb76, warning: #ffcb00, alert: #c91b00);
 $light-gray: #ececed;
 $medium-gray: #cacaca;
 $dark-gray: #393a3c;
