--- a/view/common/block-layout/resource-text-metadata-one.phtml
+++ b/view/common/block-layout/resource-text-metadata-one.phtml
@@ -21,7 +21,7 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block media-text grid-x grid-padding-x full-width-css padding-1-medium-up align-spaced">
+<div class="block media-text grid-x grid-padding-x full-width-css medium-padding-1 align-spaced">
     <?php if (!empty($heading)): ?>
     <div class="media-text-heading">
     <h2><?= $escape($heading) ?></h2>
@@ -105,4 +105,5 @@ $lang = $filterLocale ? $this->lang() : null;
       <h3 class="h4"><small><?php echo 'Reference ' . $identifier; ?></small></h3>
       <?php endif; ?>
     </div>
+</div>
 </div>
