--- a/view/common/block-layout/resource-text-video.phtml
+++ b/view/common/block-layout/resource-text-video.phtml
@@ -21,14 +21,13 @@ $filterLocale = (bool) $this->siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block full-width-css grid-x grid-padding-x margin-bottom-1 flex-container image-cover">
+<div class="block full-width-css media-text grid-x grid-padding-x full-width-css padding-1-medium-up align-spaced">
     <?php if (!empty($heading)): ?>
-    <div class="grid-container cell margin-bottom-1">
-    <h3><?= $escape($heading) ?></h3>
-    </div>
+    <div class="media-text-heading">
+    <h2><?= $escape($heading) ?></h2>
     <?php endif; ?>
-
-    <div class="<?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file image-cover-img large-7">
+    </div>
+    <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 medium-padding-right-1 large-padding-right-0 large-padding-top-1 flex-container flex-dir-column align-center">
         <div class="attachments">
             <?php
             foreach ($attachments as $attachment):
@@ -37,13 +36,18 @@ $lang = $filterLocale ? $this->lang() : null;
                 $link = null;
                 $item = $attachment->item();
                 if ($item):
-              $media = $attachment->media() ? : $item->primaryMedia();
+               $media = $attachment->media() ? : $item->primaryMedia();
                $mediaRenderer = $media->renderer();
                if ($media && $mediaRenderer !== 'iiif') :
                    echo $media->render([
                    'thumbnailType' => $thumbnailType,
                    'link' => $link,
                ]);
+               elseif ($media && $mediaRenderer === 'youtube') :
+                    echo $media->render([
+                    'thumbnailType' => $thumbnailType,
+                    'link' => $link,
+                    ]);
                elseif ($media) :
                    echo $item->linkRaw($this->thumbnail($media, $this->thumbnailType));
                endif;
@@ -69,17 +73,42 @@ $lang = $filterLocale ? $this->lang() : null;
             ?>
             <div class="item resource">
                 <?= $render ?>
-                <?php if ($attachment->caption()): ?>
                 <div class="caption">
-                    <figcaption class="orbit-caption caption"><?php echo $caption; ?></figcaption>
+                    <?= $caption ?>
                 </div>
-                <?php endif; ?>
             </div>
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="title-area background-colour-uom-footer large-5 flex-container grid-y grid-padding-y flex-dir-column align-middle align-center font-wide padding-1">
-    <h3><?= $link ?></h3>
-        <?= $html ?>
-    </div>
+    <div class="resource-text large-6 flex-container flex-dir-column align-center padding-1 large-padding-3">
+        <div class="metadata margin-bottom-1 separator-center">
+            <?php $showTitleOption = $this->showTitleOption; ?>
+            <?php if ($showTitleOption == 'item_title'): ?>
+            <h3><?php echo $item->link($item->displayTitle()); ?></h3>
+            <?php elseif ($showTitleOption == 'file_name'): ?>
+            <h3><?php echo $item->link($media->displayTitle()); ?></h3>
+            <?php endif; ?>
+        <?php
+            $date = $item->value('dcterms:date');
+            if ($date):
+            ?>
+        <h3><small><?php echo $date; ?></small></h3>
+        <?php endif; ?>
+        <?php
+            $origin = $item->value('curation:location');
+            if ($origin):
+            ?>
+        <h3><small><?php echo $origin; ?></small></h3>
+        <?php endif; ?>
+        </div>
+            <div class="text font-wide">
+                <?= $html ?>
+                <?php
+                $identifier = $item->value('dcterms:identifier');
+                if ($identifier):
+                ?>
+            <h3 class="h4"><small><?php echo 'Reference ' . $identifier; ?></small></h3>
+            <?php endif; ?>
+            </div>
+        </div>
 </div>
