Added Video Container to Resource with Text
Can now display oEmbed videos with Resource with Text block

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1606,6 +1606,12 @@ figcaption.orbit-caption.caption p {
     color: $white;
 }
 
+.video-wrap {
+    width: 100%;
+    max-width: rem-calc(800);
+    margin: 0 auto;
+}
+
 /*Media Text  Block Styling*/
 .media-text .right {
     order: 1;
