--- a/view/common/block-layout/resource-text-video.phtml
+++ b/view/common/block-layout/resource-text-video.phtml
@@ -27,8 +27,8 @@ $lang = $filterLocale ? $this->lang() : null;
     <h2><?= $escape($heading) ?></h2>
     <?php endif; ?>
     </div>
-    <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 medium-padding-right-1 large-padding-right-0 large-padding-top-1 flex-container flex-dir-column align-center">
-        <div class="attachments">
+    <div class="cell <?= $alignmentClass . ' ' . $thumbnailType . ' captions-' . $captionPosition ?> media file large-6 flex-container flex-dir-column align-center">
+        <div class="attachments responsive-embed">
             <?php
             foreach ($attachments as $attachment):
                 $render = null;
