Revised Item Show to account for different file types
Removed lightGallery: a) it's unlicensed, and 2) it is being removed for v4 of Omeka S

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -137,6 +137,10 @@ body.vertical-menu #user-bar~#content {
     margin-bottom: 0;
 }
 
+.site-title {
+    margin-right: $global-margin;
+}
+
 .site-title img {
     max-height: 2rem;
     width: auto;
