--- a/view/omeka/site/item/show.phtml
+++ b/view/omeka/site/item/show.phtml
@@ -25,7 +25,7 @@ if ($galleryDisplay) {
         elseif ((strpos($mediaType, 'audio/mpeg') !== false) || (strpos($mediaRenderer, 'oEmbed') !== false) || (strpos($mediaRenderer, 'youtube') !== false)) {
             $embedMedia[] = $media;
         }
-        elseif ((strpos($mediaType, 'image') !== false) || (strpos($mediaType, 'youtube') !== false)) {
+        elseif (strpos($mediaType, 'image') !== false) {
             $imageMedia[] = $media;
         }
          else {
@@ -42,11 +42,7 @@ if ($galleryDisplay) {
 
 <div class="grid-x">
 <?php if ($galleryDisplay): ?>
-    <?php if (count($iiifMedia) > 0): ?>
-        <div id="itemfiles" class="<?php echo $mediaDisplay; ?>">
-            <?php echo $this->mirador($item); ?>
-        </div>
-    <?php elseif (count($imageMedia) > 0): ?>
+    <?php if ((count($iiifMedia) > 0) || (count($imageMedia) > 0)): ?>
         <div id="itemfiles" class="<?php echo $mediaDisplay; ?>">
             <?php echo $this->mirador($item); ?>
         </div>
